// Protos/auth.proto
syntax = "proto3";

option csharp_namespace = "Protos.Auth";

package auth;

// ============================================
// Auth Service Definition
// ============================================
service AuthService {
  rpc Register (RegisterRequest) returns (RegisterResponse);
  rpc Login (LoginRequest) returns (LoginResponse);
  rpc RefreshToken (RefreshTokenRequest) returns (RefreshTokenResponse);
  rpc RevokeToken (RevokeTokenRequest) returns (RevokeTokenResponse);
  rpc ValidateToken (ValidateTokenRequest) returns (ValidateTokenResponse);
  rpc VerifyEmail (VerifyEmailRequest) returns (VerifyEmailResponse);
  rpc RequestPasswordReset (RequestPasswordResetRequest) returns (RequestPasswordResetResponse);
  rpc ResetPassword (ResetPasswordRequest) returns (ResetPasswordResponse);
}

// ============================================
// Register Messages
// ============================================
message RegisterRequest {
  string email = 1;
  string password = 2;
  string full_name = 3;
  string phone = 4;
}

message RegisterResponse {
  string user_id = 1;
  string email = 2;
  string full_name = 3;
  string message = 4;
}

// ============================================
// Login Messages
// ============================================
message LoginRequest {
  string email = 1;
  string password = 2;
}

message LoginResponse {
  string access_token = 1;
  string refresh_token = 2;
  int32 expires_in = 3; // seconds
  string token_type = 4; // "Bearer"
}

// ============================================
// Refresh Token Messages
// ============================================
message RefreshTokenRequest {
  string refresh_token = 1;
}

message RefreshTokenResponse {
  string access_token = 1;
  int32 expires_in = 2;
}

// ============================================
// Revoke Token Messages
// ============================================
message RevokeTokenRequest {
  string refresh_token = 1;
}

message RevokeTokenResponse {
  bool success = 1;
  string message = 2;
}

// ============================================
// Validate Token Messages
// ============================================
message ValidateTokenRequest {
  string access_token = 1;
}

message ValidateTokenResponse {
  bool is_valid = 1;
  string user_id = 2;
  repeated string roles = 3;
}

// ============================================
// Verify Email Messages
// ============================================
message VerifyEmailRequest {
  string token = 1;
}

message VerifyEmailResponse {
  bool success = 1;
  string message = 2;
  string user_id = 3;
}

// ============================================
// Request Password Reset Messages
// ============================================
message RequestPasswordResetRequest {
  string email = 1;
  string ip_address = 2;
}

message RequestPasswordResetResponse {
  bool success = 1;
  string message = 2;
}

// ============================================
// Reset Password Messages
// ============================================
message ResetPasswordRequest {
  string token = 1;
  string new_password = 2;
}

message ResetPasswordResponse {
  bool success = 1;
  string message = 2;
}